--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
   "python.linting.enabled": true,
   "python.linting.pep8Enabled": true,
   "python.testing.unittestEnabled": false,
-  "python.testing.pyTestEnabled": true,
+  "python.testing.pytestEnabled": true,
   "python.testing.nosetestsEnabled": false,
   "python.formatting.provider": "black",
   "editor.formatOnSave": true,
